--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>TOP Landing Page</title>
   </head>
   <body>
-    <header class="flex-c">
+    <header class="flex-c bg-color-200">
       <div class="header-container flex-r">
         <div class="logo">Header Logo</div>
         <ul class="navigation flex-r">
@@ -35,34 +35,42 @@
       </div>
     </header>
     <div class="random-info-container">
-      <div class="random-info-content">
+      <div class="random-info-content flex-c">
         <h2>Some random information.</h2>
-        <div class="info-card">
-          This is some subtext under an illustration or image
-        </div>
-        <div class="info-card">
-          This is some subtext under an illustration or image
-        </div>
-        <div class="info-card">
-          This is some subtext under an illustration or image
-        </div>
-        <div class="info-card">
-          This is some subtext under an illustration or image
+        <div class="info-card-container flex-r">
+          <div class="info-card flex-c">
+            <div class="card-img"></div>
+            This is some subtext under an illustration or image
+          </div>
+          <div class="info-card flex-c">
+            <div class="card-img"></div>
+            This is some subtext under an illustration or image
+          </div>
+          <div class="info-card flex-c">
+            <div class="card-img"></div>
+            This is some subtext under an illustration or image
+          </div>
+          <div class="info-card flex-c">
+            <div class="card-img"></div>
+            This is some subtext under an illustration or image
+          </div>
         </div>
       </div>
     </div>
-    <div class="testimonal-container">
-      <div class="testimonial-content">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, vero
-        laudantium dolore facere doloribus et omnis quaerat quisquam
-        perspiciatis minima possimus consequuntur voluptatibus dolorem delectus
-        voluptates ratione id a iste. <span>-Thor, God of Thunder</span>
+    <div class="testimonial-container bg-color-100">
+      <div class="testimonial-content flex-c">
+        This is an inspiring qoute, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice. <span>-Thor, God of Thunder</span>
       </div>
     </div>
-    <div class="cta-container">
-      <div class="cta-content"></div>
-      <button>Sign up</button>
+    <div class="cta-section flex-r">
+      <div class="cta-container flex-r">
+        <div class="cta-content flex-c">
+          <h3>Call to action! It's time!</h3>
+          <p>Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="button-light">Sign up</button>
+      </div>
     </div>
-    <footer>Copyright © The Odin Project 2025</footer>
+    <footer><div class="footer-content">Copyright © The Odin Project 2025</div></footer>
   </body>
 </html>
